--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
@@ -16,19 +17,27 @@
 </head>
 <body>
 
-  Learning
+<main id="container">
+  <header>
+    <img src="assets/images/illustration-article.svg" alt="">
+    <section>
+      <span>Learning</span>
+      <h4>Published 21 Dec 2023</h4>
+    </section>
+  </header>
+  <article>
+    <h1>HTML & CSS foundations</h1>
+    <p>These lenguages are the backbone of every website, defining structure, content and presentation.</p>
+  </article>
+  <footer>
+    <img src="assets/images/image-avatar.webp" alt="Greg Hopper">
+    <address>Greg Hooper</address>
+  </footer>
+</main>
 
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Jorge Sozoranga</a>.
   </div>
 </body>
 </html>
